@@ -1,4 +1,5 @@
-from tests import clear_staging_env, staging_env, eq_, ne_
+from tests import clear_staging_env, staging_env, eq_, ne_, \
+    assert_raises_message
 from alembic import util
 
 
@@ -35,6 +36,44 @@ def test_upgrade_path():
         ]
     )
 
+def test_relative_upgrade_path():
+    eq_(
+        env._upgrade_revs("+2", a.revision),
+        [
+            (b.module.upgrade, a.revision, b.revision),
+            (c.module.upgrade, b.revision, c.revision),
+        ]
+    )
+
+    eq_(
+        env._upgrade_revs("+1", a.revision),
+        [
+            (b.module.upgrade, a.revision, b.revision),
+        ]
+    )
+
+    eq_(
+        env._upgrade_revs("+3", b.revision),
+        [
+            (c.module.upgrade, b.revision, c.revision),
+            (d.module.upgrade, c.revision, d.revision),
+            (e.module.upgrade, d.revision, e.revision),
+        ]
+    )
+
+def test_invalid_relative_upgrade_path():
+    assert_raises_message(
+        util.CommandError,
+        "Relative revision -2 didn't produce 2 migrations",
+        env._upgrade_revs, "-2", b.revision
+    )
+
+    assert_raises_message(
+        util.CommandError,
+        r"Relative revision \+5 didn't produce 5 migrations",
+        env._upgrade_revs, "+5", b.revision
+    )
+
 def test_downgrade_path():
 
     eq_(
@@ -52,4 +91,34 @@ def test_downgrade_path():
             (b.module.downgrade, b.revision, b.down_revision),
             (a.module.downgrade, a.revision, a.down_revision),
         ]
+    )
+
+def test_relative_downgrade_path():
+    eq_(
+        env._downgrade_revs("-1", c.revision),
+        [
+            (c.module.downgrade, c.revision, c.down_revision),
+        ]
+    )
+
+    eq_(
+        env._downgrade_revs("-3", e.revision),
+        [
+            (e.module.downgrade, e.revision, e.down_revision),
+            (d.module.downgrade, d.revision, d.down_revision),
+            (c.module.downgrade, c.revision, c.down_revision),
+        ]
+    )
+
+def test_invalid_relative_downgrade_path():
+    assert_raises_message(
+        util.CommandError,
+        "Relative revision -5 didn't produce 5 migrations",
+        env._downgrade_revs, "-5", b.revision
+    )
+
+    assert_raises_message(
+        util.CommandError,
+        r"Relative revision \+2 didn't produce 2 migrations",
+        env._downgrade_revs, "+2", b.revision
     )
